tab and mob styles

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </main>
 
     <load src="./partials/openModalButton.html" />
-    <load src="./partials/footer.html" />
+    <!-- <load src="./partials/footer.html" /> -->
     <load src="./partials/modal.html" />
 
     <script type="module" src="./js/main.js"></script>
