--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" />
-
+    <div class="container">
+      <load src="./partials/header.html" />
+      <load src="./partials/menu.html" />
+    </div>
     <main>
       <div class="container">
         <load src="./partials/gallery.html" />
         <load src="./partials/quotes.html" />
-        <load src="./partials/menu.html" />
       </div>
     </main>
-
-    <load src="./partials/openModalButton.html" />
-    <load src="./partials/footer.html" />
+    <div class="container">
+      <load src="./partials/openModalButton.html" />
+      <load src="./partials/footer.html" />
+    </div>
     <load src="./partials/modal.html" />
 
     <script type="module" src="./js/main.js"></script>
