--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 
     <script src="./js/menu.js"></script>
     <script src="./js/nav.js"></script>
+    <load src="./js/subscribe.js" />
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
