--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,11 @@
     <main>
       <div class="container">
         <h2 class="main-title">Home page</h2>
-        <load src="./partials/gallery.html" />
+
+        <section>
+          <load src="./partials/quotes.html" />
+          <load src="./partials/gallery.html" />
+        </section>
       </div>
     </main>
 
