--- a/src/favorites.html
+++ b/src/favorites.html
@@ -25,7 +25,7 @@
 
     <main>
       <div class="container">
-        <h2 class="main-title">Favorites page</h2>
+        <load src="./partials/favorite.html" />
       </div>
     </main>
 
