--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,12 @@
     <load src="./partials/header.html" />
 
     <main>
+      <load src="./partials/hero.html" />
       <div class="container">
-        <h2 class="main-title">Home page</h2>
-
         <section>
           <load src="./partials/quotes.html" />
           <load src="./partials/gallery.html" />
+          <load src="./partials/openModalButton.html" />
         </section>
       </div>
     </main>
