--- a/src/favorites.html
+++ b/src/favorites.html
@@ -31,7 +31,7 @@
 
     <load src="./partials/menu.html" />
 
-    <script src="./js/menu.js"></script>
-    <script src="./js/nav.js"></script>
+    <script type="module" src="./js/menu.js"></script>
+    <script type="module" src="./js/nav.js"></script>
   </body>
 </html>
