--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
     <load src="./partials/menu.html" />
     <load src="./partials/modal.html" />
 
-    <script src="./js/menu.js"></script>
-    <script src="./js/nav.js"></script>
-    <script src="./js/subscribe.js"></script>
+    <script type="module" src="./js/menu.js"></script>
+    <script type="module" src="./js/nav.js"></script>
+    <script type="module" src="./js/subscribe.js"></script>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
