--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,10 @@
     <load src="./partials/hero.html" />
     <load src="./partials/filters.html" />
     <section class="container">
-      <load src="./partials/quotes.html" />
-      <load src="./partials/gallery.html" />
+      <div class="exercises-row">
+        <load src="./partials/quotes.html" />
+        <load src="./partials/gallery.html" />
+      </div>
     </section>
   </main>
 
