--- a/src/favorites.html
+++ b/src/favorites.html
@@ -30,6 +30,8 @@
     </main>
 
     <load src="./partials/menu.html" />
+    <load src="./partials/modal.html" />
+
 
     <script type="module" src="./js/menu.js"></script>
     <script type="module" src="./js/nav.js"></script>
