--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,6 @@
     <script src="./js/nav.js"></script>
     <script src="./js/subscribe.js"></script>
     <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/quote.js"></script>
   </body>
 </html>
